<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3C9D9B"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:background="#394A6D"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal"
            android:paddingTop="10dp"
            android:text="@string/tituloRegistroConductor"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="391dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingTop="10dp"
            android:text="@string/subtitulo_registroCon"
            android:textColor="@android:color/darker_gray"
            android:textSize="14sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView111"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:text="@string/n_mero_de_placa"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText22"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/el_numero_de_placa_del_transporte"
                android:ems="10"
                android:hint="@string/la_placa_de_tu_trasnporte"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@string/placa" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="171dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#52DE97"
                android:contentDescription="@string/imagen_del_bus"
                app:srcCompat="@drawable/ic_bus_01" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:layout_weight="1"
                android:text="@string/cargar_imagen_del_transporte" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="176dp"
                android:layout_height="wrap_content"
                android:text="@string/nombre_y_apellido"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:text="@string/nombre_y_apellido"
                android:hint="@string/tu_nombre_y_apellido"
                android:contentDescription="@string/tu_nombre_y_apellido"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>